# weather-data-downloader

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml  models_config.yaml  pyproject.toml  variables_mapping.yaml
.github/workflows/: ci.yml  release.yml
src/: __main__.py
src/cli/: __init__.py  main.py
src/core/downloaders/: __init__.py  http_data_downloader.py
src/core/interfaces/: __init__.py  data_downloader.py  data_processor.py  data_subsetter.py  storage_manager.py  variable_mapper.py  weather_model_provider.py
src/core/mapping/: __init__.py  yaml_variable_mapper.py
src/core/processors/: __init__.py  grib_processor.py
src/core/providers/: __init__.py  gfs_provider.py
src/core/subsetting/: __init__.py  netcdf_subsetter.py
src/utils/: __init__.py  compression.py  file_operations.py  logging_manager.py  time_management.py  validation.py
tests/: conftest.py
tests/fixtures/configs/: test_config.yaml  test_models_config.yaml  test_variables_mapping.yaml
tests/helpers/: factories.py  mocks.py
tests/unit/: test_setup.py
tests/unit/cli/: test_helpers.py  test_main.py
tests/unit/core/: __init__.py
tests/unit/core/mapping/: __init__.py  test_yaml_variable_mapper.py
tests/unit/core/processors/: __init__.py  test_grib_processor.py  test_temporal_coordinates.py
tests/unit/core/providers/: __init__.py  test_gfs_provider.py
tests/unit/utils/: test_file_operations.py  test_time_management.py  test_validation.py
